<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LastFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions"
        android:layout_margin ="16dp"
        android:layout_gravity="bottom"
        android:onClick="permissionsDidClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin ="16dp"
        android:text="@string/notifications"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="notificationsDidClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin ="16dp"
        android:text="@string/preferences"
        android:onClick="preferencesDidClick"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/last_ten"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragments_last_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="72dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/fragment_last_recycler_item"/>

    <TextView
        android:id="@+id/fragments_last_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="32sp"
        android:rotation="-45"
        android:textColor="#999"
        android:shadowColor="#80999999"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/empty"/>
</FrameLayout>